--- a/5_snRNAseq_v2.Rmd
+++ b/5_snRNAseq_v2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Section 5: snRNAseq analysis"
+title: "Section 5: snRNAseq/scRNAseq analysis"
 date: "`r Sys.Date()`"
 author:
   - name: Arun Seetharam
